<resources>
    <string name="app_name">RJ Downloader</string>
    <string name="splash_hint">Easy way to download radio javan medias.</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About App</string>
    <string name="downloads">Downloads</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="about_title">About Application</string>
    <string name="about_text">Developers : \nAlireza [ @Incognito_Coder ]\nShayan [ @Shayan_ITMan ]\nThis is an open source project so you can get it on github.\nIf you have any idea to make our app better please tell us.</string>
    <string name="hint_url">Enter link here</string>
    <string name="telegram_not">No Activity to handle this request(Telegram not installed)</string>
    <string name="vpn_dialog">This app need a vpn for working.\nPlease enable a VPN connection and return to app.</string>
    <string name="searching">Searching request …</string>
    <string name="download_started">Download Started.Check Notification</string>
    <string name="empty_queue">there is not any link in queue</string>
    <string name="github_repository" translatable="false">Github Repository</string>
    <string name="fetchtext">Fetch</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="deleted">Deleted Successfully.</string>
    <string name="delete">DELETE</string>
    <string name="ask_del">Do you want to delete %1$s?\nThis action cannot be undone.</string>
    <string name="attention">Attention</string>
    <string name="github">Github</string>
    <string name="website">Website</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="unknown">Unknown</string>
    <string name="copied_clip">Copied to ClipBoard</string>
    <string name="prefs_general">General</string>
    <string name="pref_download">Download Settings</string>
    <string name="prefs_key_dark_mode">Enable Dark Theme</string>
    <string name="sum_theme">Change application theme from light to dark.Required to restart application</string>
    <string name="song_quality">Select Music Quality</string>
    <string name="prefs_others">Others</string>
    <string name="about_summary">Some information about app and developers</string>
    <string name="song_quality_summary">Choose between 320 and 256 to use as default file quality</string>
    <string name="default_download_manager">Disable to use built in download manager</string>
    <string name="enable_dm">Use Android Default Download Manager</string>
    <string name="restart">Restart to apply changes</string>
    <string name="help_summary">How to use downloader</string>
    <string name="downloading">Downloading file</string>
    <string name="please_wait">Wait a moment</string>
    <string name="empty">Cant be empty</string>
    <string name="invalidUrl">Invalid Address</string>
</resources>