<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_downloads"
            android:icon="@drawable/ic_outline_archive_24"
            android:title="@string/downloads" />
    </group>
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_outline_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_outline_help_outline_24"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_outline_exit_to_app_24"
            android:title="@string/exit" />
    </group>
</menu>